[package]
name = "thermal_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.3", features = ["derive"] }
heck = "0.5.0"
thermal_parser = { git = 'https://github.com/zachzurn/thermal' }
thermal_renderer = { git = 'https://github.com/zachzurn/thermal' }